--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.19)
-project(shoppinglist)
+project(shoppinglistmanager)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(shoppinglist main.cpp ShoppingObject.cpp ShoppingObject.h ShoppingList.cpp ShoppingList.h)
+add_executable(shoppinglistmanager main.cpp ShoppingObject.cpp ShoppingObject.h ShoppingList.cpp ShoppingList.h)
